k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - cloudwithammar.com
        - api.cloudwithammar.com
      secretName: app-tls-secret
  rules:
    - host: cloudwithammar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-nodeport
                port:
                  number: 80
    - host: api.cloudwithammar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-clusterip
                port:
                  number: 5000
